# deployed-full-stack-ai-youtube-video-rag-assistant

./: .gitignore  app.py  ingest.py  main.py  pyproject.toml  requirements.txt  requirments.txt  retriever.py  streamlit_app.py  utils.py
