[project]
name = "yt-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=7.3.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torchvision>=0.27.1",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.6.9",
]
